// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icon components snapshot test ai icon snapshot test 1`] = `
<svg
  color="blue"
  fill="currentColor"
  height={10}
  onClick={[Function]}
  stroke="currentColor"
  strokeWidth="0"
  style={
    Object {
      "color": "blue",
    }
  }
  viewBox="0 0 1024 1024"
  width={10}
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Test Ai icon
  </title>
  <path
    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 0 1-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
  />
</svg>
`;

exports[`icon components snapshot test io5 icon snapshot test 1`] = `
<svg
  color="blue"
  fill="currentColor"
  height={10}
  onClick={[Function]}
  stroke="currentColor"
  strokeWidth="0"
  style={
    Object {
      "color": "blue",
    }
  }
  viewBox="0 0 512 512"
  width={10}
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Test Io5 icon
  </title>
  <path
    d="M384 224v184a40 40 0 01-40 40H104a40 40 0 01-40-40V168a40 40 0 0140-40h167.48M336 64h112v112M224 288L440 72"
    fill="none"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="32"
  />
</svg>
`;
